--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
-libmaxminddb (1.5.2-1pexip1) pexip; urgency=medium
+libmaxminddb (1.5.2-1pexip1) pexip-bullseye; urgency=medium
 
-  * Prepare Pexip packaging
+  * Prepare Pexip packaging for Bullseye.
 
  -- Mark Hymers <mark.hymers@pexip.com>  Wed, 29 Jun 2022 14:15:35 +0100
 
