--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmaxminddb (1.5.2-1pexip3) pexip-bullseye; urgency=medium
+
+  * Bullseye rebuild for ARM64 inclusion
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Mon, 05 Sep 2022 10:32:21 +0100
+
 libmaxminddb (1.5.2-1pexip2) pexip-bullseye; urgency=medium
 
   * Rebuild for override changes
