Initial bookworm build

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmaxminddb (1.7.1-1pexip1) pexip-bookworm; urgency=medium
+
+  * Initial bookworm build
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Thu, 16 Nov 2023 10:06:47 +0000
+
 libmaxminddb (1.7.1-1) unstable; urgency=medium
 
   * New upstream release.
