--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmaxminddb (1.7.1-1pexip2) pexip-bookworm; urgency=medium
+
+  * Bookworm build for product distribution
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Sat, 09 Dec 2023 22:53:06 +0000
+
 libmaxminddb (1.7.1-1pexip1) pexip-bookworm; urgency=medium
 
   * Initial bookworm build
