--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmaxminddb (1.7.1-1+pexip24u3) pexip-bookworm; urgency=medium
+
+  * New versioning scheme
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Thu, 01 Feb 2024 16:05:34 +0000
+
 libmaxminddb (1.7.1-1pexip2) pexip-bookworm; urgency=medium
 
   * Bookworm build for product distribution
